--- a/src/app/rules/rules.module.css
+++ b/src/app/rules/rules.module.css
@@ -39,7 +39,7 @@
 }
 
 .leftPanel {
-    flex: 0 0 40%;
+    flex: 1;
     padding: 20px;
     background-color: #fff;
     border-radius: 4px;
@@ -47,7 +47,7 @@
 }
 
 .rightPanel {
-    flex: 0 0 52%;
+    flex: 1;
     padding: 20px;
     background-color: #fff;
     border-radius: 4px;
